@startuml

title __COMPONENTS's Class Diagram__\n

  namespace com.apetrei.engine {
    namespace components {
      class com.apetrei.engine.components.BackgroundSprite {
          - sprite : BufferedImage
          + BackgroundSprite()
          + componentInit()
          + componentRender()
          + componentUpdate()
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace components {
      class com.apetrei.engine.components.Collider2D {
          + Collider2D()
          + componentInit()
          + componentRender()
          + componentUpdate()
          + getRigidbody()
          + setRigidbody()
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace components {
      abstract class com.apetrei.engine.components.Component {
          + Component()
          {abstract} + componentInit()
          {abstract} + componentRender()
          {abstract} + componentUpdate()
          + getParent()
          + setParent()
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace components {
      class com.apetrei.engine.components.PlayerComponent {
          - engineLevel : int
          + PlayerComponent()
          + componentInit()
          + componentRender()
          + componentUpdate()
          + getEngineLevel()
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace components {
      class com.apetrei.engine.components.SpriteComponent {
          - sprite : BufferedImage
          + SpriteComponent()
          + componentInit()
          + componentRender()
          + componentUpdate()
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace components {
      class com.apetrei.engine.components.TransformComponent {
          # rotation : float
          + TransformComponent()
          + TransformComponent()
          + componentInit()
          + componentRender()
          + componentUpdate()
          + getPosition()
          + getRotation()
          + setPosition()
          + setRotation()
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace components {
      class com.apetrei.engine.components.TurretComponent {
          + componentInit()
          + componentRender()
          + componentUpdate()
          + fireProjectile()
      }
    }
  }
  

  com.apetrei.engine.components.BackgroundSprite -up-|> com.apetrei.engine.components.Component
  com.apetrei.engine.components.BackgroundSprite o-- com.apetrei.engine.components.TransformComponent : transformComponent
  com.apetrei.engine.components.Collider2D -up-|> com.apetrei.engine.components.Component
  com.apetrei.engine.components.Collider2D o-- com.apetrei.engine.physics.rigidbody.Rigidbody2D : rigidbody
  com.apetrei.engine.components.Component o-- com.apetrei.engine.GameObject : parent
  com.apetrei.engine.components.PlayerComponent -up-|> com.apetrei.engine.components.Component
  com.apetrei.engine.components.PlayerComponent o-- com.apetrei.engine.physics.rigidbody.Rigidbody2D : rigidbody
  com.apetrei.engine.components.PlayerComponent o-- com.apetrei.misc.Vector2 : temptemp
  com.apetrei.engine.components.PlayerComponent o-- com.apetrei.engine.components.TurretComponent : turretComponent
  com.apetrei.engine.components.SpriteComponent -up-|> com.apetrei.engine.components.Component
  com.apetrei.engine.components.SpriteComponent o-- com.apetrei.engine.components.TransformComponent : transformComponent
  com.apetrei.engine.components.TransformComponent -up-|> com.apetrei.engine.components.Component
  com.apetrei.engine.components.TransformComponent o-- com.apetrei.misc.Vector2 : position
  com.apetrei.engine.components.TurretComponent -up-|> com.apetrei.engine.components.Component
  com.apetrei.engine.components.TurretComponent o-- com.apetrei.engine.physics.rigidbody.Rigidbody2D : rigidbody


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
